Fixed form grid gap size for desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ h3 {
 
 form {
     display: grid;
-    grid-gap: 16px;
+    grid-gap: 12px;
    /*  grid-template-columns: 2fr 1fr; */
 }
 
